# gitsage

./: .gitattributes  .gitignore  AUDIT-CERTIFICATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_ACTION_PLAN.md  COMPREHENSIVE-TEST-RESULTS.md  CONTRIBUTING.md  DAY_5_COMPLETE.md  DEL-README.md  DELETE-REPO-README.md  FINAL-TEST-REPORT.md  GETTING_STARTED.txt  GITHUB-FOR-BEGINNERS.md  IMPROVEMENTS_SUMMARY.md  LANDING_PAGE_TEMPLATE.html  LICENSE  MASTER_PLAN.md  NEW_FEATURES.md  NOVICE_USER_IMPROVEMENTS.md  PACKAGE_ANALYSIS.md  PHASE2_SUMMARY.md  PROJECT_STATUS.md  QUICK-REFERENCE.md  QUICKSTART.md  QUICK_START_NOVICE_UX.md  README.md  REALISTIC_UX_IMPROVEMENTS.md  ROADMAP.md  SECURITY.md  TEST-RESULTS.md  UNIVERSAL_LAUNCHER_AUDIT.md  UPGRADE.md  UPGRADE_SUMMARY.md  WIKI-GENERATOR-README.md  auto-readme-generator.py  backup-manager.py  check_installation.py  delete-repo.sh  dependency-graph.json  (+25 more)
.github/workflows/: ci.yml  release.yml
docs/: OUTPUT-FOLDER.md
docs/archive/: ANALYSIS_REPORT.md  ANALYSIS_SUMMARY.txt  README.md  WINDOWS_COMPATIBILITY_FIXES.md  WINDOWS_COMPATIBILITY_INDEX.md  WINDOWS_COMPATIBILITY_REPORT.md  wiki-generator-basic-legacy.py
docs/business/: MARKETING_KIT.md  PORTFOLIO_SHOWCASE.md  SCREENSHOT_GUIDE.md  VISUAL_SHOWCASE.md
docs/development/: V2.2-ARCHITECTURE.md
docs/learning/: advanced-git-workflows.md  github-actions-tutorial.md  open-source-contribution.md
docs/user-guides/: getting-started.md  repository-management.md  wiki-gitbook-guide.md
output/: README.md
output/README/: AUTO-GENERATED-README.md  SAMPLE-PYTHON-LIBRARY-README.md
output/backups/: backup_index.json
output/backups/gitsage-test-backup_manual_20251128_163522/: metadata.json
output/docs/deployment/: deploy-gitbook.sh  deploy-wiki.sh
output/docs/gitbook/: README.md  SUMMARY.md  best-practices.md  book.json  community.md  contact.md  contributing.md  overview.md
output/docs/github-wiki/: Authentication.md  Configuration.md  Deployment.md  Examples.md  Testing.md  Troubleshooting.md
output/wiki/test-gitbook-output/: advanced-features.md  architecture.md  endpoints.md  faq.md  sdks.md
output/wiki/test-wiki-output/: Basic-Usage.md  Home.md  Installation.md  Quick-Start.md  _Sidebar.md
scripts/bash/: repo-manager.sh
scripts/git-resets/: migrate_and_swap_repos.sh  migrate_repository.sh  migrate_sync_swap.sh  reset_git_history.sh
scripts/powershell/: Delete-Repository.ps1  Generate-ReadmeInteractive.ps1  Generate-Wiki.ps1  Initialize-Repository.ps1  Launch-GitSage.ps1  Manage-Repository.ps1  Migrate-Repository.ps1  README.md  Reset-GitHistory.ps1  Test-RepositoryHealth.ps1
src/gitsage/: __main__.py  __version__.py
src/gitsage/cli/: __init__.py  launcher.py
src/gitsage/config/: __init__.py  settings.py
src/gitsage/generators/: __init__.py
src/gitsage/managers/: __init__.py
src/gitsage/utils/: __init__.py  beautification_scorer.py  cli_file_browser.py  colors.py  environment.py  github_stats.py  logger.py  project_detector.py  repo_health.py  validators.py
src/gitsage/web/: __init__.py  app.py
src/gitsage/web/static/css/: style.css
src/gitsage/web/static/js/: main.js
src/gitsage/web/templates/: about.html  backups.html  base.html  error.html  generators.html  health_checker.html  index.html  readme_generator.html  repositories.html  settings.html  setup_wizard.html  wiki_generator.html
templates/readme/: api-documentation.md  cli-tool.md  data-pipeline.md  devops-infrastructure.md  machine-learning.md  mobile-app.md  npm-package.md  saas-platform.md  web-application.md
test-run/: wiki-config.yaml
tests/: README.md  __init__.py  conftest.py
tests/unit/: __init__.py  test_integration.py  test_readme_generator.py  test_wiki_generator.py
utils/: exceptions.py
